--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,9 @@
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #C1B5AD;
+  /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
+  background-color: aliceblue;
+  color: pink;
+  padding: 50px;
+
 }
